--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,35 @@
-
+alabaster==0.7.13
+Babel==2.12.1
+certifi==2023.5.7
+charset-normalizer==3.1.0
+colorama==0.4.6
+docopt==0.6.2
+docutils==0.19
+idna==3.4
+imagesize==1.4.1
+iniconfig==2.0.0
+Jinja2==3.1.2
+MarkupSafe==2.1.3
+none==0.1.1
+packaging==23.1
+pipreqs==0.4.13
+pluggy==1.2.0
+Pygments==2.15.1
+PySide6==6.5.1.1
+PySide6-Addons==6.5.1.1
+PySide6-Essentials==6.5.1.1
+pytest==7.3.2
+requests==2.31.0
+rfc3986==2.0.0
+shiboken6==6.5.1.1
+snowballstemmer==2.2.0
+Sphinx==5.3.0
+sphinxcontrib-applehelp==1.0.4
+sphinxcontrib-devhelp==1.0.2
+sphinxcontrib-htmlhelp==2.0.1
+sphinxcontrib-jsmath==1.0.1
+sphinxcontrib-qthelp==1.0.3
+sphinxcontrib-serializinghtml==1.1.5
+sphinxcontrib-websupport==1.2.4
+urllib3==2.0.3
+yarg==0.1.9
